# goopax-examples

./: .gitmodules  README-individualtargets.sh  README.txt  build-all.bat  build-all.sh  build-external-libraries-for-ios.sh  build-external-libraries.sh  build-for-android.sh  build-for-ios.sh  build.sh
ext/: build-boost.sh  build-eigen.sh  build-gmp.sh  build-opencv.sh  build-sdl.sh
src/: .clang-format  CMakeLists.txt  cl-interop-1.cpp  cl-interop-2.cpp  common.cmake  cosmology.cpp  cuda-interop.cu  deep-zoom-mandelbrot.cpp  fft.cpp  gather.cpp  glut-linalg.cpp  glut-linalg.cu  helloworld.cpp  mandelbrot-small.cpp  mandelbrot-unspecified.cpp  mandelbrot.cpp  matmul-small.cpp  matmul.cpp  memory-transfer.cpp  nbody.cpp  pi.cpp  race-condition.cpp  radix_sort.hpp  simple.cpp  stl-datagroups.cpp  svm-pingpong.cpp
src/cmake/: common.cmake  macros.cmake
src/common/: cl2.hpp  output.hpp  particle.hpp
src/common/draw/: CMakeLists.txt  types.h  window.h  window.mm  window_gl.cpp  window_gl.h  window_gl.mm  window_metal.h  window_metal.mm  window_plain.cpp  window_plain.h  window_sdl.cpp  window_sdl.h  window_sdl.mm  window_vulkan.cpp  window_vulkan.h
src/ext/: CMakeLists.txt
src/ios/: Info.plist  fft.plist
