cmake_minimum_required(VERSION 3.15)

project(goopax_examples LANGUAGES CXX)

if (CMAKE_VERSION VERSION_LESS "3.20")
  set (CMAKE_CXX_STANDARD 20)
else()
  set (CMAKE_CXX_STANDARD 23)
endif()

# Disabling cuda examples by default because of compatibility issues between cuda and gcc>=13
option(WITH_CUDA "WITH_CUDA" OFF)

include(cmake/macros.cmake)

set(MY_CMAKE_ARGS "")
list(APPEND MY_CMAKE_ARGS "-DCMAKE_INSTALL_RPATH_USE_LINK_PATH:BOOL=on")
if (WITH_CUDA)
  find_package(CUDA)
  project(goopax_examples LANGUAGES CXX CUDA)
  list(APPEND MY_CMAKE_ARGS "-DCMAKE_CUDA_STANDARD:STRING=17")
endif()
if (WIN32)
  if (NOT CMAKE_CONFIGURATION_TYPES)
    set(CMAKE_CONFIGURATION_TYPES "Debug;Release")
  endif()
  if (NOT CMAKE_MSVC_RUNTIME_LIBRARY)
    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDebug")
  endif()
  list(APPEND MY_CMAKE_ARGS "-DCMAKE_CONFIGURATION_TYPES:STRING=${CMAKE_CONFIGURATION_TYPES}" "-DCMAKE_MSVC_RUNTIME_LIBRARY:STRING=${CMAKE_MSVC_RUNTIME_LIBRARY}")
elseif (APPLE)
  enable_language(OBJCXX)
  list(APPEND MY_CMAKE_ARGS "-DCMAKE_OBJCXX_STANDARD:STRING=20")
  include(cmake/common.cmake)
endif()
if (ANDROID)
  list(APPEND MY_CMAKE_ARGS "-DCMAKE_SYSTEM_NAME:STRING=Android" "-DCMAKE_ANDROID_STL_TYPE:STRING=c++_static" "-DCMAKE_SYSTEM_VERSION:STRING=28" "-DCMAKE_ANDROID_ARCH_ABI:STRING=${CMAKE_ANDROID_ARCH_ABI}" "-DCMAKE_ANDROID_NDK:STRING=${CMAKE_ANDROID_NDK}")
endif()
if (ANDROID OR IOS)
  message("Applying toolchain workaround, so that packages are found.")
  list(APPEND MY_CMAKE_ARGS "-DCMAKE_FIND_ROOT_PATH_MODE_PACKAGE:STRING=BOTH" "-DCMAKE_FIND_ROOT_PATH_MODE_LIBRARY:STRING=BOTH" "-DCMAKE_FIND_ROOT_PATH_MODE_INCLUDE:STRING=BOTH")
endif()
make_persistent("${MY_CMAKE_ARGS}")

find_package(goopax REQUIRED PATHS ../..)
find_package(TBB)
make_goopax_exec(gather)
make_goopax_exec(svm-pingpong)
make_goopax_exec(memory-transfer)
make_goopax_exec(pi)
make_goopax_exec(simple)
make_goopax_exec(race-condition)
make_goopax_exec(helloworld)

if (WITH_CUDA)
  add_executable(cuda-interop cuda-interop.cu)
  target_link_libraries(cuda-interop PRIVATE goopax::goopax)
  if (TARGET TBB::tbb)
    target_link_libraries(cuda-interop PRIVATE TBB::tbb)
  endif()
endif()
find_package(Boost 1.65.0 COMPONENTS multiprecision PATHS "${CMAKE_BINARY_DIR}/ext/boost")
find_package(SDL3 PATHS "${CMAKE_BINARY_DIR}/ext/sdl3")
find_package(Eigen3 3.3 NO_MODULE PATHS "${CMAKE_BINARY_DIR}/ext/eigen")
find_package(OpenCV PATHS "${CMAKE_BINARY_DIR}/ext/opencv" "${CMAKE_BINARY_DIR}/ext/opencv/sdk/native/jni")
find_path(GLATTER_INCLUDE_DIR
  glatter/glatter.h
  PATHS "${CMAKE_BINARY_DIR}/ext/build_glatter-prefix/src/build_glatter/include"
)

add_subdirectory(ext)
if (OpenCV_FOUND)
  add_library(opencv INTERFACE)
  target_link_libraries(opencv INTERFACE ${OpenCV_LIBS})
  target_include_directories(opencv SYSTEM INTERFACE ${OpenCV_INCLUDE_DIRS})
endif()
if (GLATTER_INCLUDE_DIR)
  add_library(glatter INTERFACE)
  target_include_directories(glatter SYSTEM INTERFACE "${GLATTER_INCLUDE_DIR}")
endif()

add_subdirectory(common/draw)
if (GOOPAX_DRAW_WITH_OPENGL OR GOOPAX_DRAW_WITH_METAL AND NOT GOOPAX_DEBUG AND NOT ANDROID)
  add_sdl_main(nbody glatter goopax_draw)
endif()

find_package(OpenCL)
if (OpenCL_FOUND)
  make_goopax_exec(cl-interop-1)
  target_link_libraries(cl-interop-1 PRIVATE OpenCL::OpenCL)
  make_goopax_exec(cl-interop-2)
  target_link_libraries(cl-interop-2 PRIVATE OpenCL::OpenCL)
endif()

add_subdirectory(ext)

add_subdirectory(common/draw)

if (TARGET goopax_draw)
  make_goopax_exec(matmul)
  if (TARGET goopax_typedefs)
    target_link_libraries(svm-pingpong PRIVATE goopax_typedefs)
    target_link_libraries(matmul PRIVATE goopax_typedefs)
  endif()

  make_goopax_exec(mandelbrot)
  target_link_libraries(mandelbrot PRIVATE goopax_draw)
  if (TARGET mandelbrot)
    target_compile_definitions(mandelbrot PRIVATE -DGOOPAX_ALLOW_DEPRECATED_DEVICES=1)
  endif()
  find_package(Boost 1.65.0 COMPONENTS multiprecision PATHS "${CMAKE_BINARY_DIR}/ext/boost")
  if (Boost_FOUND)
    make_goopax_exec(deep-zoom-mandelbrot)
    target_link_libraries(deep-zoom-mandelbrot PRIVATE Boost::boost goopax_draw)
  else()
    message(STATUS "deep-zoom-mandelbrot dependencies not found: Download with cmake --build build --target build_boost")
  endif()

  find_package(OpenCV PATHS "${CMAKE_BINARY_DIR}/ext/opencv" "${CMAKE_BINARY_DIR}/ext/opencv/sdk/native/jni")
  if (OpenCV_FOUND)
    make_goopax_exec(fft)
    target_link_libraries(fft PRIVATE ${OpenCV_LIBS})
    target_include_directories(fft SYSTEM PRIVATE ${OpenCV_INCLUDE_DIRS})
    target_link_libraries(fft PRIVATE goopax_draw)
    if (IOS)
      SET_TARGET_PROPERTIES(fft PROPERTIES MACOSX_BUNDLE_INFO_PLIST "${PROJECT_SOURCE_DIR}/ios/fft.plist")
    elseif (ANDROID)
      target_link_libraries(fft mediandk camera2ndk)
    endif()
  else()
    message(STATUS "fft dependencies not found: Download with cmake --build build --target build_opencv")
  endif()

  if (TARGET build_glatter)
    if (GOOPAX_DRAW_WITH_OPENGL OR GOOPAX_DRAW_WITH_METAL)
      if (NOT GOOPAX_DEBUG)
        make_goopax_exec(nbody)
        ExternalProject_Get_Property(build_glatter SOURCE_DIR)
        target_include_directories(nbody PRIVATE ${SOURCE_DIR}/include)
        target_link_libraries(nbody PRIVATE goopax_draw)
        if (APPLE)
          SET_SOURCE_FILES_PROPERTIES( nbody.cpp PROPERTIES LANGUAGE OBJCXX )
        endif()
      else()
        message(STATUS "nbody not available if GOOPAX_DEBUG set")
      endif()
    else()
      message(STATUS "nbody not available for platform")
    endif()
  else()
    message(STATUS "nbody dependencies not found: Download with cmake --build build --target build_glatter")
  endif()
else()
  message(STATUS "goopax_draw not found.")
endif()
